Fix full height on mobile device

--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -2,5 +2,5 @@
   flex: 1 1 100%;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 5.5rem);
+  height: calc(var(--vh, 1vh) * 100 - 5.5rem);
 }
